--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "repository": "https://github.com/glaubersabino/nlw-rocketseat-3-backend.git",
   "author": "Glauber Albuquerque <glauber.sabino19@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+  },
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.8"
+    "@types/express": "^4.17.8",
+    "ts-node-dev": "^1.0.0-pre.64",
+    "typescript": "^4.0.3"
   }
 }
